--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<a [routerLink]="['/products']">Products</a> |
+<!-- <a [routerLink]="['/products']">Products</a> |
 <a [routerLink]="['/cart']">Cart</a>
 <br><br>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+<div>
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+</div>
