--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,17 +24,7 @@
         </ng-container>
         <ng-container *ngIf="auth.isAuthenticated()">
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/companies-list']"
-              >Manage Companies</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/services']">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link">
-              {{ auth.getUsername() }}
-            </a>
+            <a class="nav-link" [routerLink]="['/cart']">Cart</a>
           </li>
           <li class="nav-item">
             <a class="nav-link pointer" (click)="logout()"> Logout </a>
