--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="col-12">
       <div class="row">
-        <div class="col-4">
+        <div class="col-2">
           <form [formGroup]="brandRef">
             <select name="" id="brand" class="custom-select">
               <option selected>All</option>
@@ -28,26 +28,54 @@
             </select>
           </form>
         </div>
-        <div class="col-8">
-          <div class="row">
-            <div
-              *ngFor="let product of products"
-              class="card col"
-              style="border: 0px"
-            >
-              <div class="shadow">
-                <img
-                  src="../../assets/images/{{ product.image }}"
-                  alt=""
-                  srcset=""
-                />
-              </div>
-              <div class="card-body justify-content-center">
-                <span class="card-title">{{ product.name }}</span>
-                <p>{{ product.details }}</p>
+        <div class="col-10">
+          <div
+            *ngFor="let product of products"
+            class="card col"
+            style="border: 0px"
+          >
+            <div class="shadow">
+              <img
+                src="../../assets/images/{{ product.image }}"
+                alt=""
+                srcset=""
+              />
+            </div>
+            <div class="card-body justify-content-center">
+              <span class="card-title">{{ product.name }}</span>
+              <p>{{ product.details }}</p>
+              <div class="row">
                 <div class="col">{{ product.price }}</div>
                 <div class="col">
-                  <a [routerLink]="['/card', { id: id }]"></a>
+                  <a
+                    [routerLink]="[
+                      '/cart',
+                      {
+                        id: product._id,
+                        name: product.name,
+                        image: product.image,
+                        price: product.price,
+                        details: product.details
+                      }
+                    ]"
+                    >Add to Cart</a
+                  >
+                </div>
+                <div class="col">
+                  <a
+                    [routerLink]="[
+                      '/product-details',
+                      {
+                        id: product._id,
+                        name: product.name,
+                        image: product.image,
+                        price: product.price,
+                        details: product.details,
+                        company: product.company
+                      }
+                    ]"
+                    >Details</a
+                  >
                 </div>
               </div>
             </div>
