updated css in homepage, product details

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,16 @@
 .marge {
   margin-top: 1%;
 }
+
+.content {
+  margin-top: 2em;
+}
+
+img {
+  width: 50%;
+  height: auto;
+}
+
+.shadow {
+  text-align: center;
+}
