--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,72 +10,93 @@
     </div>
   </div>
 </ng-container>
-<ng-container *ngIf="auth.isAuthenticated()">
+<ng-container *ngIf="auth.isAuthenticated() && companyLoaded && productLoaded">
   <div class="container">
     <div class="col-12">
       <div class="row">
-        <div class="col-2">
-          <form [formGroup]="brandRef">
-            <select name="" id="brand" class="custom-select">
+        <div *ngIf="companies" class="col-2">
+          <form [formGroup]="brandRef" (ngSubmit)="selectCompany()">
+            <select
+              name=""
+              id="brand"
+              class="custom-select"
+              formControlName="cname"
+            >
               <option selected>All</option>
               <option
                 *ngFor="let company of companies"
-                formControlName="cname"
-                value="company.name"
+                value="{{ company.name }}"
               >
-                {{ company.name }}
-              </option>
-            </select>
+                {{ company?.name }}
+              </option></select
+            ><br /><br />
+            <input type="submit" value="show" />
           </form>
+          <br /><br />
+          <button type="button" class="btn btn-secondary" (click)="clearAll()">
+            Clear
+          </button>
         </div>
         <div class="col-10">
           <div
-            *ngFor="let product of products"
-            class="card col"
-            style="border: 0px"
+            *ngIf="showProducts"
+            class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5"
           >
-            <div class="shadow">
-              <img
-                src="../../assets/images/{{ product.image }}"
-                alt=""
-                srcset=""
-              />
-            </div>
-            <div class="card-body justify-content-center">
-              <span class="card-title">{{ product.name }}</span>
-              <p>{{ product.details }}</p>
-              <div class="row">
-                <div class="col">{{ product.price }}</div>
-                <div class="col">
-                  <a
-                    [routerLink]="[
-                      '/cart',
-                      {
-                        id: product._id,
-                        name: product.name,
-                        image: product.image,
-                        price: product.price,
-                        details: product.details
-                      }
-                    ]"
-                    >Add to Cart</a
-                  >
-                </div>
-                <div class="col">
-                  <a
-                    [routerLink]="[
-                      '/product-details',
-                      {
-                        id: product._id,
-                        name: product.name,
-                        image: product.image,
-                        price: product.price,
-                        details: product.details,
-                        company: product.company
-                      }
-                    ]"
-                    >Details</a
-                  >
+            <div
+              *ngFor="let product of showProducts"
+              class="card col mb-4"
+              style="border: 0px"
+            >
+              <div class="shadow">
+                <img src="../../assets/{{ product.image }}" />
+              </div>
+              <div class="card-body justify-content-center">
+                <span class="card-title">{{ product?.name }}</span>
+                <p>{{ product?.details }}</p>
+                <div class="row">
+                  <div class="col">{{ product?.price }}</div>
+                  <div class="col">
+                    <a
+                      [routerLink]="[
+                        '/cart',
+                        {
+                          id: product._id,
+                          name: product.name,
+                          image: product.image,
+                          price: product.price,
+                          details: product.details
+                        }
+                      ]"
+                      ><svg
+                        width="1em"
+                        height="1em"
+                        viewBox="0 0 16 16"
+                        class="bi bi-cart"
+                        fill="currentColor"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          fill-rule="evenodd"
+                          d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"
+                        /></svg
+                    ></a>
+                  </div>
+                  <div class="col">
+                    <a
+                      [routerLink]="[
+                        '/product-details',
+                        {
+                          id: product._id,
+                          name: product.name,
+                          image: product.image,
+                          price: product.price,
+                          details: product.details,
+                          company: product.company
+                        }
+                      ]"
+                      >Details</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
