--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,8 +3,8 @@
   style="background-color: #e3f2fd"
 >
   <div class="container">
-    <a routerLink="/" class="navbar-brand" routerLinkActive="active"
-      >Admin Portal</a
+    <a routerLink="/home" class="navbar-brand" routerLinkActive="active"
+      >Buyer Portal</a
     >
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
